cluster/prod/galera/galera/galera-netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-galera-ingress
  namespace: galera
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mariadb-galera
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          ns: galera
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: mariadb-galera
    ports:
    - protocol: TCP
      port: 3306
    - protocol: TCP
      port: 4567
    - protocol: TCP
      port: 4568
    - protocol: TCP
      port: 4444
  - from:
    - namespaceSelector:
        matchLabels:
          ns: home-automation
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: home-assistant
    ports:
    - protocol: TCP
      port: 3306
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-galera-egress
  namespace: galera
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mariadb-galera
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          ns: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: adguard
      podSelector:
        matchLabels:
          app.kubernetes.io/name: adguard-home
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 192.168.0.10/32
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: galera
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: mariadb-galera
    ports:
    - protocol: TCP
      port: 3306
    - protocol: TCP
      port: 4567
    - protocol: TCP
      port: 4568
    - protocol: TCP
      port: 4444
